Updated images naming convention

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../Styles/styles.css">
-  <link rel="shortcut icon" href="../Src/Images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../Src/Images/Icons/favicon.ico" type="image/x-icon">
   <title>Storm creations - projects</title>
 </head>
 
@@ -27,13 +27,13 @@
 
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
-      <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
+      <img class="navbar__mobile-burgerMenu" src="../Src/Images/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
     </nav>
 
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/SMG UV render.png" alt="Hero image">
+        <img src="../Src/Images/Projects/Blender_related/SMG_UV_thumbnail.png" alt="Hero image">
         <h1>Projects</h1>
       </div>
     </section>
@@ -43,7 +43,7 @@
 
     <div class="divider"> </div>
 
-    <!-- section 1 -->
+    <!-- Unity3D section -->
 
     <section>
       <div class="leftAligned__text">
@@ -55,40 +55,40 @@
       </div>
 
       <div class="projects__grid">
-        <div class="projects__grid-image-container"><img src="../Src/Images/AI battle camp.gif" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/AI_battle_thumbnail.gif" alt="project thumbnail">
           <p> AI battle camp</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Energy Sword shader.gif"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Energy_Sword_shader_thumbnail.gif"
             alt="project thumbnail">
           <p> Energy sword shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/vehicle physics portrait.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/vehicle_physics_thumbnail.png"
             alt="project thumbnail">
           <p> Vehicle physics simulator</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Minecraft project render.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Minecraft_project_thumbnail.png"
             alt="project thumbnail">
           <p> Minecraft like Voxel generation</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Bullet tracking effect.gif"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Bullet_tracking_thumbnail.gif"
             alt="project thumbnail">
           <p> Bullet tracking </p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Laser shader.gif" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Laser_shader_thumbnail.gif" alt="project thumbnail">
           <p> Laser shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/water depth shader render.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/water_depth_shader_thumbnail.png"
             alt="project thumbnail">
           <p> Water depth shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Energy shield shader render.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Energy_shield_shader_thumbnail.png"
             alt="project thumbnail">
           <p> Energy shield shader</p>
         </div>
@@ -98,12 +98,12 @@
 
     <div class="divider"> </div>
 
-    <!-- section 2 -->
+    <!-- Unreal engine section -->
 
     <section>
 
       <div class="leftAligned__text">
-        <h2> Unreal Engine </h2>
+        <h2> Unreal engine </h2>
       </div>
 
       <div class="centered__container-text">
@@ -112,11 +112,11 @@
       </div>
 
       <div class="projects__grid">
-        <div class="projects__grid-image-container"><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images//Dummy image.png" alt="project thumbnail">
           <p> Shield shader </p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/volumetric clouds shader.PNG"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unreal_related/volumetric_clouds_shader_thumbnail.PNG"
             alt="project thumbnail">
           <p> Volumetric clouds shader</p>
         </div>
@@ -135,7 +135,7 @@
 
     <div class="divider"> </div>
 
-    <!-- section 3 -->
+    <!-- Blender section -->
 
     <section>
 
@@ -152,19 +152,19 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/SMG render.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/SMG_thumbnail.png" alt="project thumbnail">
           <p> Halo custom SMG</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/AR render.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/AR_thumbnail.png" alt="project thumbnail">
           <p> Halo custom assault rifle</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/BR render.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/BR_thumbnail.png" alt="project thumbnail">
           <p> Halo custom battle rifle</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/DMR render.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/DMR_thumbnail.png" alt="project thumbnail">
           <p> Halo custom DMR</p>
         </div>
 
@@ -174,7 +174,7 @@
 
     <div class="divider"> </div>
 
-    <!-- section 4 -->
+    <!-- Wordpress section -->
 
     <section>
       <div class="leftAligned__text">
@@ -188,21 +188,21 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/ipdlz snapshot.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/ipdlz_thumbnail.png" alt="project thumbnail">
           <p> Ipdlz - customizable grip bands</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/clo company snapshot.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/clo_company_thumbnail.png"
             alt="project thumbnail">
           <p> C.L.O Company</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/getback snapshot.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/getback_thumbnail.png"
             alt="project thumbnail">
           <p> Getback</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/tamales don alberto snapshot.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/Tamales_don_alberto_thumbnail.png"
             alt="project thumbnail">
           <p> Tamales Don Alberto</p>
         </div>
@@ -212,7 +212,7 @@
 
     <div class="divider"> </div>
 
-    <!-- section 5 -->
+    <!-- Shopify section -->
 
     <section>
       <div class="leftAligned__text">
@@ -228,7 +228,7 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/custom pickleballs snapshot.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Shopify_related/custom_pickleballs_thumbnail.png"
             alt="project thumbnail">
           <p> Custom Pickleball Bands</p>
         </div>
