--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../Styles/styles.css">
-  <link rel="shortcut icon" href="../Src/Images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../Src/Images/Icons/favicon.ico" type="image/x-icon">
   <title>Storm creations - about me</title>
 </head>
 
@@ -28,14 +28,14 @@
 
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
-      <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
+      <img class="navbar__mobile-burgerMenu" src="../Src/Images/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
     </nav>
 
     <!-- hero title and image -->
-    
+
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Code snippet.png" alt="Hero image">
+        <img src="../Src/Images/Projects/Unity_related/Code_snippet_thumbnail.png" alt="Hero image">
         <h1>About me</h1>
       </div>
     </section>
@@ -53,7 +53,7 @@
     <section class="container text-center">
       <div class="row mt-5 mb-5">
         <div class="col-md mt-5">
-          <img src="../Src/Images/profile-picture.png" class="img-fluid rounded-5 p-4 mb-3 " alt="profile picture">
+          <img src="../Src/Images/Profile/profile_thumbnail.png" class="img-fluid rounded-5 p-4 mb-3 " alt="profile picture">
 
         </div>
         <div class="col-md-6 offset-md-2 align-self-center">
