--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../Styles/styles.css">
-  <link rel="shortcut icon" href="../Src/Images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../Src/Images/Icons/favicon.ico" type="image/x-icon">
   <title>Storm creations - contact</title>
 </head>
 
@@ -28,13 +28,13 @@
 
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
-      <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
+      <img class="navbar__mobile-burgerMenu" src="../Src/Images/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
     </nav>
 
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/DMR render.png" alt="Hero image">
+        <img src="../Src/Images/Projects/Blender_related/DMR_thumbnail.png" alt="Hero image">
         <h1>Contact</h1>
       </div>
     </section>
