--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./Styles/styles.css">
-  <link rel="shortcut icon" href="./Src/Images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./Src/Images/Icons/favicon.ico" type="image/x-icon">
   <title>Storm creations portfolio</title>
 </head>
 
@@ -27,7 +27,7 @@
 
     <!-- Mobile Navbar -->
     <nav class="navbar__mobile-container">
-      <img class="navbar__mobile-burgerMenu" src="../Src/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
+      <img class="navbar__mobile-burgerMenu" src="./Src/Images/Icons/icons8-menu-50.png" alt="Navbar mobile menu">
     </nav>
 
     <!-- Hero primary image -->
@@ -44,25 +44,25 @@
             <div class="carousel-inner h-100">
 
               <div class="carousel-item active h-100">
-                <img src="./Src/Images/DMR render.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Blender_related/DMR_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/AR render.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Blender_related/AR_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/tamales don alberto snapshot.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Wordpress_related/Tamales_don_alberto_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/vehicle physics portrait.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Unity_related/vehicle_physics_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/SMG UV render.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Blender_related/SMG_UV_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
               </div>
-              
+
             </div>
           </div>
         </div>
