Added missing logos on index page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section>
       <div class="hero__container">
         <div class="hero__logo-container">
-          <a href="./index.html"><img src="./Src/Images/Logos/Dummy logo.png" alt="site logo"></a>
+          <a href="./index.html"><img src="./Src/Images/Logos/Dummy_logo.png" alt="site logo"></a>
           <h1 class="text-center mb-5">Web developer & <br> Game developer <span>Generalist </span></h1>
         </div>
 
@@ -115,9 +115,12 @@
 
       <div class="app__icons-grid">
         <img src="./Src/Images/Logos/U_Logo_Small_White_RGB_1C.png" alt="Unity logo">
+        <img src="./Src/Images/Logos/Blender_logo.png" alt="Blender logo">
         <img src="./Src/Images/Logos/UE_Logo_stacked_unreal-engine_white.png" alt="Unreal engine logo">
+        <img src="./Src/Images/Logos/shopify-mono-white.png" alt="Blender logo">
         <img src="./Src/Images/Logos/WordPress-logotype-alternative-white.png" alt="Wordpress logo">
-        <img src="./Src/Images/Logos/Blender logo.png" alt="Blender logo">
+        <img src="./Src/Images/Logos/WIX_logo.png" alt="Blender logo">
+
       </div>
 
       <div class="centered__container-text">
