Removed dummy images on Projects site

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -50,10 +50,6 @@
         <h2> Unity3D </h2>
       </div>
 
-      <div class="centered__container-text">
-        <p> 3D projects made in Unity, featuring the vast usage of shaders for effects and some unique mechanics </p>
-      </div>
-
       <div class="projects__grid">
         <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/AI_battle_thumbnail.gif" alt="project thumbnail">
           <p> AI battle camp</p>
@@ -106,27 +102,15 @@
         <h2> Unreal engine </h2>
       </div>
 
-      <div class="centered__container-text">
-        <p>Miscelaneous projects made in Unreal Engine 4 and 5.
-        </p>
-      </div>
-
       <div class="projects__grid">
-        <div class="projects__grid-image-container"><img src="../Src/Images//Dummy image.png" alt="project thumbnail">
-          <p> Shield shader </p>
-        </div>
 
         <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unreal_related/volumetric_clouds_shader_thumbnail.PNG"
             alt="project thumbnail">
           <p> Volumetric clouds shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unreal_related/Thermal_vision_thumbnail.gif" alt="project thumbnail">
           <p> Thermal vision shader </p>
-        </div>
-
-        <div class="projects__grid-image-container"><img src="../Src/Images/Dummy image.png" alt="project thumbnail">
-          <p> Directional damage indicator</p>
         </div>
 
       </div>
@@ -141,13 +125,6 @@
 
       <div class="leftAligned__text">
         <h2> Blender </h2>
-      </div>
-
-      <div class="centered__container-text">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas neque reprehenderit rerum, incidunt
-          consectetur
-          animi. Nulla consequuntur, sapiente commodi magnam ut fugit, provident aliquam ad minima sed quidem iste!
-          Quibusdam.</p>
       </div>
 
       <div class="projects__grid">
@@ -181,11 +158,6 @@
         <h2> Wordpress </h2>
       </div>
 
-      <div class="centered__container-text">
-        <p> Websites made using elementor and Wordpress, fully responsive designs; Some sites feature
-          custom shop implementations using PHP, javascript and css. </p>
-      </div>
-
       <div class="projects__grid">
 
         <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/ipdlz_thumbnail.png" alt="project thumbnail">
@@ -217,13 +189,6 @@
     <section>
       <div class="leftAligned__text">
         <h2> Shopify </h2>
-      </div>
-
-      <div class="centered__container-text">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas neque reprehenderit rerum, incidunt
-          consectetur
-          animi. Nulla consequuntur, sapiente commodi magnam ut fugit, provident aliquam ad minima sed quidem iste!
-          Quibusdam.</p>
       </div>
 
       <div class="projects__grid">
