added logo at Contact page

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -54,7 +54,7 @@
     <!-- contact form  -->
     <section class="contact__form-container">
       <div class="contact__form-logo">
-        <img src="../Src/Images/Logos/Dummy logo.png" alt="site logo">
+        <img src="../Src/Images/Logos/Dummy_logo.png" alt="site logo">
       </div>
 
       <div class="contact__form-div">
