changed images format to WEBP

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -47,7 +47,7 @@
 
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Projects/Unity_related/Code_snippet_thumbnail.png" alt="Hero image">
+        <img src="../Src/Images/Projects/Unity_related/code-snippet-thumbnail.png" alt="Hero image">
         <h1>About me</h1>
       </div>
     </section>
@@ -84,8 +84,8 @@
     <div class="divider"></div>
 
     <section class="about__grid">
-      <img src="../Src/Images/Dummy image.png" alt="interest picture">
-      <img src="../Src/Images/Dummy image.png" alt="interest picture">
+      <img src="../Src/Images/dummy-image.webp" alt="interest picture">
+      <img src="../Src/Images/dummy-image.webp" alt="interest picture">
     </section>
 
     <section id="info__paragraph">
@@ -99,7 +99,7 @@
 
     <div class="about__grid">
 
-      <img src="../Src/Images/Dummy image.png" alt="interest picture">
+      <img src="../Src/Images/dummy-image.webp" alt="interest picture">
     </div>
 
     <section id="info__paragraph">
