--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -47,7 +47,7 @@
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Projects/Blender_related/DMR_thumbnail.png" alt="Hero image">
+        <img src="../Src/Images/Projects/Blender_related/dmr-thumbnail.webp" alt="Hero image">
         <h1>Contact</h1>
       </div>
     </section>
