--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -47,7 +47,7 @@
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Projects/Blender_related/SMG_UV_thumbnail.png" alt="Hero image">
+        <img src="../Src/Images/Projects/Blender_related/smg-uv-thumbnail.webp" alt="Hero image">
         <h1>Projects</h1>
       </div>
     </section>
@@ -65,40 +65,40 @@
       </div>
 
       <div class="projects__grid">
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/AI_battle_thumbnail.gif" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/ai-battle-thumbnail.gif" alt="project thumbnail">
           <p> AI battle camp</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Energy_Sword_shader_thumbnail.gif"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/energy-sword-shader-thumbnail.gif"
             alt="project thumbnail">
           <p> Energy sword shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/vehicle_physics_thumbnail.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/vehicle-physics-thumbnail.webp"
             alt="project thumbnail">
           <p> Vehicle physics simulator</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Minecraft_project_thumbnail.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/minecraft-project-thumbnail.webp"
             alt="project thumbnail">
           <p> Minecraft like Voxel generation</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Bullet_tracking_thumbnail.gif"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/bullet-tracking-thumbnail.gif"
             alt="project thumbnail">
           <p> Bullet tracking </p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Laser_shader_thumbnail.gif" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/laser-shader-thumbnail.gif" alt="project thumbnail">
           <p> Laser shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/water_depth_shader_thumbnail.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/water-depth-shader-thumbnail.webp"
             alt="project thumbnail">
           <p> Water depth shader</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/Energy_shield_shader_thumbnail.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unity_related/energy-shield-shader-thumbnail.webp"
             alt="project thumbnail">
           <p> Energy shield shader</p>
         </div>
@@ -118,7 +118,7 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unreal_related/volumetric_clouds_shader_thumbnail.PNG"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Unreal_related/volumetric-clouds-shader-thumbnail.webp"
             alt="project thumbnail">
           <p> Volumetric clouds shader</p>
         </div>
@@ -143,19 +143,19 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/SMG_thumbnail.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/smg-thumbnail.webp" alt="project thumbnail">
           <p> Halo custom SMG</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/AR_thumbnail.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/ar-thumbnail.webp" alt="project thumbnail">
           <p> Halo custom assault rifle</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/BR_thumbnail.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/br-thumbnail.webp" alt="project thumbnail">
           <p> Halo custom battle rifle</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/DMR_thumbnail.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Blender_related/dmr-thumbnail.webp" alt="project thumbnail">
           <p> Halo custom DMR</p>
         </div>
 
@@ -174,21 +174,21 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/ipdlz_thumbnail.png" alt="project thumbnail">
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/ipdlz-thumbnail.webp" alt="project thumbnail">
           <p> Ipdlz - customizable grip bands</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/clo_company_thumbnail.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/clo-company-thumbnail.webp"
             alt="project thumbnail">
           <p> C.L.O Company</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/getback_thumbnail.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/getback-thumbnail.webp"
             alt="project thumbnail">
           <p> Getback</p>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/Tamales_don_alberto_thumbnail.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/Tamales-don-alberto-thumbnail.webp"
             alt="project thumbnail">
           <p> Tamales Don Alberto</p>
         </div>
@@ -207,7 +207,7 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Shopify_related/custom_pickleballs_thumbnail.png"
+        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Shopify_related/custom_pickleballs_thumbnail.webp"
             alt="project thumbnail">
           <p> Custom Pickleball Bands</p>
         </div>
