--- a/index.html
+++ b/index.html
@@ -57,23 +57,23 @@
             <div class="carousel-inner h-100">
 
               <div class="carousel-item active h-100">
-                <img src="./Src/Images/Projects/Blender_related/DMR_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Blender_related/dmr-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/Projects/Blender_related/AR_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Blender_related/ar-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/Projects/Wordpress_related/Tamales_don_alberto_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Wordpress_related/Tamales-don-alberto-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/Projects/Unity_related/vehicle_physics_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Unity_related/vehicle-physics-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
               <div class="carousel-item h-100">
-                <img src="./Src/Images/Projects/Blender_related/SMG_UV_thumbnail.png" class="h-100 w-100" alt="Hero carousel image">
+                <img src="./Src/Images/Projects/Blender_related/smg-uv-thumbnail.webp" class="h-100 w-100" alt="Hero carousel image">
               </div>
 
             </div>
