--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -47,7 +47,7 @@
     <!-- hero title and image -->
     <section>
       <div class="hero__container-image">
-        <img src="../Src/Images/Projects/Unity_related/Minecraft_project_thumbnail.png" alt="Hero image">
+        <img src="../Src/Images/Projects/Unity_related/minecraft-project-thumbnail.webp" alt="Hero image">
         <h1>Blog</h1>
       </div>
     </section>
@@ -69,7 +69,7 @@
     <section class="blog__grid">
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
-          <img src="../Src/Images/Dummy image.png" alt="blog entry image">
+          <img src="../Src/Images/dummy-image.webp" alt="blog entry image">
           <p>01/01/<span>2023<span></p>
         </div>
 
@@ -88,7 +88,7 @@
 
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
-          <img src="../Src/Images/Dummy image.png" alt="blog entry image">
+          <img src="../Src/Images/dummy-image.webp" alt="blog entry image">
           <p>01/01/<span>2023<span></p>
         </div>
 
@@ -107,7 +107,7 @@
 
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
-          <img src="../Src/Images/Dummy image.png" alt="blog entry image">
+          <img src="../Src/Images/dummy-image.webp" alt="blog entry image">
           <p>01/01/<span>2023<span></p>
         </div>
 
@@ -126,7 +126,7 @@
 
       <div class="blog__grid-element">
         <div class="blog__grid-element-image-container">
-          <img src="../Src/Images/Dummy image.png" alt="blog entry image">
+          <img src="../Src/Images/dummy-image.webp" alt="blog entry image">
           <p>01/01/<span>2023<span></p>
         </div>
 
