--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -109,7 +109,6 @@
         laboriosam, nihil ab, ratione nobis quia id veritatis inventore deserunt aspernatur blanditiis earum odit.</p>
     </section>
 
-
   </main>
 
   <footer>
@@ -120,6 +119,7 @@
     </div>
   </footer>
 
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
