--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -224,7 +224,8 @@
       <H2>Footer</H2>
     </div>
   </footer>
-
+  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
