improved responsive behaviour

--- a/Pages/about-me.html
+++ b/Pages/about-me.html
@@ -57,23 +57,23 @@
     <div class="divider"> </div>
 
     <div class="leftAligned__text">
-      <h2 id="name"> My profile </h2>
+      <h2 id="profile__header"> My profile </h2>
     </div>
 
     <!-- bootstrap profile description container -->
 
     <section class="container text-center">
-      <div class="row mt-5 mb-5">
+      <div class="row mb-5">
         <div class="col-md mt-5">
-          <img src="../Src/Images/Profile/profile_thumbnail.png" class="img-fluid rounded-5 p-4 mb-3 " alt="profile picture">
+          <img src="../Src/Images/Profile/profile_thumbnail.png" class="img-fluid rounded-5 mx-auto mb-4 p-3" alt="profile picture">
 
         </div>
         <div class="col-md-6 offset-md-2 align-self-center">
-          <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis officia cum dolores ut expedita quaerat
+          <p class="mx-2"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis officia cum dolores ut expedita quaerat
             eveniet explicabo doloremque harum maxime quos ab, facere voluptas tenetur qui dignissimos blanditiis
             aliquid laborum.</p>
 
-          <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis officia cum dolores ut expedita quaerat
+          <p class="mx-2"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis officia cum dolores ut expedita quaerat
             eveniet explicabo doloremque harum maxime quos ab, facere voluptas tenetur qui dignissimos blanditiis
             aliquid laborum.</p>
         </div>
@@ -97,10 +97,7 @@
 
     <div class="divider"> </div>
 
-    <div class="about__grid">
-
-      <img src="../Src/Images/dummy-image.webp" alt="interest picture">
-    </div>
+      <img class="img-fluid d-flex rounded-5 mx-auto align-content-center mt-5" src="../Src/Images/dummy-image.webp" alt="interest picture">
 
     <section id="info__paragraph">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat a, deleniti magnam aspernatur eveniet alias,
