--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -59,7 +59,7 @@
 
     <!-- Title -->
 
-    <div class="leftAligned__text">
+    <div class="leftAligned__text" id="entries__title">
       <h2> Latest entries </h2>
     </div>
 
