--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -56,11 +56,9 @@
   <main>
     <div class="divider"> </div>
 
-    <section class="centered__container-text">
+    <section class="centered__container-text mx-2">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, distinctio. Quos ratione incidunt voluptatibus
-        fugiat, eum omnis sed, dolorum, impedit possimus hic odit ullam cum commodi officia doloremque dolorem optio!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quisquam tempore suscipit corporis doloremque
-        doloribus culpa autem quas, nemo sequi, recusandae sit. Ex quidem accusantium, dolor sapiente quis nulla sunt.
+        fugiat.
       </p> 
     </section>
 
@@ -74,7 +72,7 @@
         <div class="contact__form-wrapper">
           <div class="contact__form-background">
             <h2>Contact info</h2>
-            <form action="none">
+            <form class="contact__form-inputs" action="none">
               <input type="text" name="name" id="" placeholder="Name">
               <input type="email" name="email" id="" placeholder="E-mail">
               <textarea name="" id="" placeholder="Type here"></textarea>
