fixed text margin on desktop

--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
           experiences mainly for desktop platforms using the latest
           technologies available on the market, specially those that can be considered revolutionary;
           In addition to that, I am currently learning full stack web development where I have
-          already done some exciting and unique projects focused on e-commerce also with a responsive design that works
-          fantastic
-          on mobile platforms.<br> If you wish to learn more about me, click the button below </p>
+          already done some exciting and unique projects focused on e-commerce, fully responsive on
+          mobile plattforms.</p>
+          <p>
+            If you wish to learn more about me, click the button below 
+          </p>
         <a href="./Pages/about-me.html"><button type="button" class="redirection__button"> More about me</button></a>
       </div>
     </section>
@@ -162,8 +164,7 @@
 
       <div class="centered__container-text">
         <p>If any of my previous projects caught your atention and you are looking to hire me, click the button below to
-          be
-          redirected to the contact page</p>
+          be redirected to the contact page</p>
         <a href="./Pages/contact.html"><button type="button" class="redirection__button"> Contact me</button></a>
       </div>
     </section>
