--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -84,11 +84,28 @@
 
   </main>
 
+ 
+  <!-- footer -->
   <footer>
-    <div class="divider"> </div>
     <div class="footer">
       <div id="footer__edge"></div>
-      <H2>Footer</H2>
+      <!-- bootstrap grid for footer -->
+      <div class="container text-center mt-5 mb-0 pb-0 align-self-center" >
+        <div class="row cols-3">
+          <div class="col-sm"></div>
+
+          <div class="col-sm "> 
+          <p id="footer__author">2023 • Storm creations </p>
+          
+          </div>
+          <div class="col-sm">
+            
+           <a href="https://github.com/stormAster720" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/GitHub_Logo_White.png" alt="footer brands"></a>
+           <a href="https://www.upwork.com/freelancers/~01da68228d3870698b" target="_blank"><img id="footer__logo" class="px-3" src="../Src/Images/Logos/Upwork-logo-white.png" alt="footer brands"></a>
+
+          </div>
+        </div>
+      </div>
     </div>
   </footer>
 
