--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../Styles/styles.css">
+  <link rel="stylesheet" href="../Styles/main.css">
   <link rel="shortcut icon" href="../Src/Images/Icons/favicon.ico" type="image/x-icon">
   <title>Storm creations - blog</title>
 </head>
