--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./Styles/styles.css">
+  <link rel="stylesheet" href="./Styles/main.css">
   <link rel="shortcut icon" href="./Src/Images/Icons/favicon.ico" type="image/x-icon">
   <title>Storm creations portfolio</title>
 </head>
@@ -46,7 +46,7 @@
     <!-- Hero primary image -->
     <section>
       <div class="hero__container">
-        <div class="hero__logo-container">
+        <div class="hero__container-logo">
           <a href="./index.html"><img src="./Src/Images/Logos/Dummy_logo.png" alt="site logo"></a>
           <h1 class="text-center mb-5">Web developer & <br> Game developer <span>Generalist </span></h1>
         </div>
