replaced bem structure for hero on index page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Hero primary image -->
     <section>
       <div class="hero__container">
-        <div class="hero__logo-container">
+        <div class="hero__container-logo">
           <a href="./index.html"><img src="./Src/Images/Logos/Dummy_logo.png" alt="site logo"></a>
           <h1 class="text-center mb-5">Web developer & <br> Game developer <span>Generalist </span></h1>
         </div>
