added links to website images at projects page

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -174,23 +174,28 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/ipdlz-thumbnail.webp" alt="project thumbnail">
-          <p> Ipdlz - customizable grip bands</p>
+        <div class="projects__grid-image-container">
+          <a href="https://ipdlz.com" target="_blank"> <img src="../Src/Images/Projects/Wordpress_related/ipdlz-thumbnail.webp"
+              alt="project thumbnail"> <p> iPdlz - pickleball bands </p>
+          </a>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/clo-company-thumbnail.webp"
-            alt="project thumbnail">
-          <p> C.L.O Company</p>
+        <div class="projects__grid-image-container">
+          <a href="https://www.clocompany.com" target="_blank"> <img src="../Src/Images/Projects/Wordpress_related/clo-company-thumbnail.webp"
+              alt="project thumbnail"> <p> CLO company </p>
+          </a>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/getback-thumbnail.webp"
-            alt="project thumbnail">
-          <p> Getback</p>
+        <div class="projects__grid-image-container">
+          <a href="https://getback.tech" target="_blank"> <img src="../Src/Images/Projects/Wordpress_related/getback-thumbnail.webp"
+              alt="project thumbnail"> <p> Getback </p>
+          </a>
         </div>
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Wordpress_related/tamales-don-alberto-thumbnail.webp"
-            alt="project thumbnail">
-          <p> Tamales Don Alberto</p>
+        <div class="projects__grid-image-container">
+          <a href="https://tamalesdonalberto.com" target="_blank"> <img src="../Src/Images/Projects/Wordpress_related/tamales-don-alberto-thumbnail.webp"
+              alt="project thumbnail"> <p> Tamales Don Alberto</p>
+          </a>
         </div>
 
       </div>
@@ -207,9 +212,11 @@
 
       <div class="projects__grid">
 
-        <div class="projects__grid-image-container"><img src="../Src/Images/Projects/Shopify_related/custom_pickleballs_thumbnail.webp"
-            alt="project thumbnail">
-          <p> Custom Pickleball Bands</p>
+        <div class="projects__grid-image-container">
+          <a href="https://custompickleballbands.com" target="_blank"> <img src="../Src/Images/Projects/Shopify_related/custom_pickleballs_thumbnail.webp"
+              alt="project thumbnail"> <p> Custom pickleball bands</p>
+          </a>
+        
         </div>
 
       </div>
