--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -88,7 +88,7 @@
       <img src="../src/images/dummy-image.webp" alt="interest picture">
     </section>
 
-    <section id="info__paragraph">
+    <section class="centered__container-text">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat a, deleniti magnam aspernatur eveniet alias,
         consequatur placeat cum distinctio unde mollitia, temporibus iste obcaecati illo tempore eaque odit labore aut.
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus labore ipsam doloremque eum non, facere sequi
@@ -99,7 +99,7 @@
 
       <img class="img-fluid d-flex rounded-5 mx-auto align-content-center mt-5" src="../src/images/dummy-image.webp" alt="interest picture">
 
-    <section id="info__paragraph">
+    <section class="centered__container-text">
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat a, deleniti magnam aspernatur eveniet alias,
         consequatur placeat cum distinctio unde mollitia, temporibus iste obcaecati illo tempore eaque odit labore aut.
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus labore ipsam doloremque eum non, facere sequi
