--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Full stack web developer and game developer portfolio">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="shortcut icon" href="./src/images/icons/favicon.ico" type="image/x-icon">
@@ -48,7 +49,7 @@
       <div class="hero__container">
         <div class="hero__container-logo">
           <a href="./index.html"><img src="./src/images/logos/dummy_logo.png" alt="site logo"></a>
-          <h1 class="text-center mb-5">Web developer & <br> Game developer <span>Generalist </span></h1>
+          <h1 class="text-center mb-5">Web developer & <br> Game developer <span>generalist </span></h1>
         </div>
 
         <!--Hero secondary image bootstrap carousel-->
