added SEO to pages, modified scss a bit  and removed lorem text from most pages

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Take a look at all the projects I have done related to Unity3D, Unreal Engine, WIX, Wordpress, shopify and more">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="shortcut icon" href="../src/images/icons/favicon.ico" type="image/x-icon">
-  <title>Storm creations - projects</title>
+  <title>Luis Felipe's portfolio | Projects</title>
 </head>
 
 <body>
@@ -216,11 +217,16 @@
           <a href="https://custompickleballbands.com" target="_blank"> <img src="../src/images/projects/shopify_related/custom_pickleballs_thumbnail.webp"
               alt="project thumbnail"> <p> Custom pickleball bands</p>
           </a>
-        
         </div>
-
       </div>
     </section>
+
+    
+    <div class="divider"> </div>
+
+    <div class="text-center mb-5 mt-5">
+      <a href="../index.html"><button class="redirection__button"> Back to homepage </button></a>
+      </div>
 
   </main>
 
