--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Full blog catalog of Luis Felipe, know curiosities and useful tips for game development or web development ">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="shortcut icon" href="../src/images/icons/favicon.ico" type="image/x-icon">
-  <title>Storm creations - blog</title>
+  <title>Luis Felipe's portfolio | Blog</title>
 </head>
 
 <body>
@@ -157,7 +158,6 @@
 
   </main>
 
-  
   <!-- footer -->
   <footer>
     <div class="footer">
