--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Do you have interest in any of my projects, want to hire me or want to ask questions? Feel free to contact me here">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/main.css">
   <link rel="shortcut icon" href="../src/images/icons/favicon.ico" type="image/x-icon">
-  <title>Storm creations - contact</title>
+  <title>Luis Felipe's portfolio | Contact</title>
 </head>
 
 <body>
@@ -56,14 +57,14 @@
   <main>
     <div class="divider"> </div>
 
-    <section class="centered__container-text mx-2">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, distinctio. Quos ratione incidunt voluptatibus
-        fugiat.
+    <section class="centered__container-text text-center">
+      <p>If you have interest on any of my projects, want your dream game to come true or just want to ask questions feel free to contact me
+        by filling the form below!
       </p> 
     </section>
 
     <!-- contact form  -->
-    <section class="contact__form-container">
+    <section class="contact__form">
       <div class="contact__form-logo">
         <img src="../src/images/logos/dummy_logo.png" alt="site logo">
       </div>
