--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Hi there, my name is Luis and this is my personal portfolio website of my role as a web developer and game developer generalist">
+  <meta name="description" content="Hi there, my name is Luis and this is my personal portfolio website of my role as a web developer and game developer generalist, click here to see my full projects list!">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="shortcut icon" href="./src/images/icons/favicon.ico" type="image/x-icon">
